test/corpus/declarations.txt
================================================================================
Variables declarations
================================================================================

// Unquoted string variable
$string = mystring
// Quoted string variable
$ipv4 = "8.8.8.8"
// Number variable
$number = (123)
// Relative prop variable
$fqdn = :fqdn
// Function call output variable
$out = $myFunction()

---

(program
  (identifier)
)

================================================================================
Multiple variables declarations
================================================================================

($x, $y) = ("abc", "def")
($x, $y, $z) = ("abc", (123), "def")

--------------------------------------------------------------------------------

(source_file)

================================================================================
Function declarations
================================================================================

function myFunction() {}
function myFunction(foo) {}
function myFunction(bar, baz=$lib.null) {}

--------------------------------------------------------------------------------

(comment)
(comment)
