test/corpus/literals.txt
================================================================================
Comments
================================================================================

// This is a comment
/* This is a 
multiline comment */

--------------------------------------------------------------------------------

(comment)
(comment)

================================================================================
Function definition
================================================================================

function getFooByBar(bar) {
  // This is a comment
}

--------------------------------------------------------------------------------

(program
      (function_declaration
        (identifier)
        (parameters
          (identifier))
        (block
          (comment))))

================================================================================
Function call
================================================================================

$getFooByBar()
$getFooByBar($x, $y)

--------------------------------------------------------------------------------

(comment)
(comment)
